--- a/poa-backend/src/main/resources/application.properties
+++ b/poa-backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.application.name=poa-backend
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.show-sql=true
+server.port=443
+server.ssl.key-store=ssl//keystore.p12
+server.ssl.key-store-password=springboot
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+#logging.level.org.springframework.security=DEBUG
