--- a/poa-backend/src/main/resources/application.properties
+++ b/poa-backend/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=poa-backend
-spring.datasource.url=jdbc:mysql://localhost:3306
-spring.datasource.username=user
-spring.datasource.password=password
-spring.jpa.show-sql=true
+spring.data.mongodb.uri=mongodb+srv://Asa:FavRwReB2lnuleS9@cluster0.u8vwe.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=poa-backend
 server.port=443
 server.ssl.key-store=ssl//keystore.p12
 server.ssl.key-store-password=springboot
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
-#logging.level.org.springframework.security=DEBUG
