--- a/poa-front-end/angular.json
+++ b/poa-front-end/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "poa-front-end"
+    }
+  },
+  "defaultProject": "poa-front-end",
+  "cli": {
+    "analytics": "08800a52-3125-482c-baf3-4ea6427c16c4"
+  }
 }
