--- a/poa-backend/Dockerfile
+++ b/poa-backend/Dockerfile
@@ -1,5 +1,5 @@
 FROM amazoncorretto:17-alpine-jdk
 ARG JAR_FILE=target/*.jar
 COPY ${JAR_FILE} app.jar
-COPY /ssl/keystore.p12 /ssl/keystore.p12
+COPY ./ssl/keystore.p12 ./ssl/keystore.p12
 ENTRYPOINT ["java","-jar","/app.jar"]
