--- a/poa-front-end/Dockerfile
+++ b/poa-front-end/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:18.12.1 AS build
 WORKDIR /usr/src/app
 COPY package.json package-lock.json ./
-RUN npm install
 COPY . .
-RUN npm run build
+RUN npm config set legacy-peer-deps true
+RUN npm install && node_modules/.bin/ng build --configuration production
 
-FROM nginx:1.17.1-alpine
+FROM nginx:latest
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /usr/src/app/dist/poa-front-end /usr/share/nginx/html
+COPY --from=build /usr/src/app/dist/poa-front-end /usr/share/nginx/html/
