--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,15 @@
-version: '3.5' # We use version 3.5 syntax
+version: "3.9"
 services:
   poa-backend:
     container_name: poa-backend
+    restart: unless-stopped
     build:
       context: ./poa-backend
       dockerfile: Dockerfile
+    deploy:
+      restart_policy:
+        condition: on-failure
+        max_attempts: 3
     ports:
       - '443:443'
     environment:
